--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,9 @@ en:
       create: "Role created successfully!!"  
       update: "Role updated successfully!!"
       destroy: "Role deleted successfully!!"
+      show: "Role displayed successfully!"
+      index: "All Roles"
+      
     error:
       create: "Role not created!!" 
       not_found: "Role not found!!"
@@ -45,15 +48,22 @@ en:
     success:
       create: "User created successfully!!"  
       update: "User updated successfully!!"
+      destroy: "User deleted successfully!!"
+      index: "All Users"
+      show: "User displayed successfully!"
+
+
     error:
       create: "User not created!!"    
-      update: "User not found!!"
+      not_found: "User not found!!"
 
   brand:
     success:
       create: "Brand created successfully!!"  
       update: "Brand updated successfully!!"
       destroy: "Brand deleted successfully!!"
+      show: "Brand displayed successfully"
+      index: "All Brands"
     error:
       create: "Brand not created!!" 
       not_found: "Brand not found!!"
@@ -64,6 +74,16 @@ en:
       update: "Product updated successfully!!"
     error:
       create: "Product not created!!" 
-      not_found: "Product not found!"   
+      not_found: "Product not found!"
+
+  brand_product:
+    success:
+      update: "Brand Product updated successfully!"
+    error:
+      not_found: "Brand Product not found!"
+
+  authorization: 
+    failure: "Token not present!!"
+
 
   
