pushing to test order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -78,6 +78,9 @@ en:
     success:
       create: "Product created successfully!!"  
       update: "Product updated successfully!!"
+      destroy: "Product deleted successfully!!"
+      show: "Product displayed successfully!!"
+      index: "All Products"
     error:
       create: "Product not created!!" 
       not_found: "Product not found!"
