--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
   hello: "Hello world"
   params_missing: "Parameters missing"
   token_expired: "Token has been expired"
+  unverified_token: "Unable to verify token"
+  decodeerror: "Unable to decode token"
 
   role:
     success:
